# RosCos_Task

./: .env.dev  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  to_postgres.json
backend/config/: routers.py  settings.py  urls.py
backend/music/: admin.py  models.py  serializers.py  urls.py  views.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/components/: Albums.vue
frontend/src/router/: index.js
